--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "serve": "^14.2.1"
+    "@aws-sdk/client-s3": "^3.958.0",
+    "serve": "^14.2.1",
+    "sharp": "^0.34.5"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.879.0",
-    "dotenv": "^17.2.1",
-    "sharp": "^0.34.3"
+    "dotenv": "^17.2.1"
   }
 }
